--- a/templates/sitepublic/index.html.twig
+++ b/templates/sitepublic/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{# Correspond à l'accueil du site #}
+
 {% block main %}
 <div class="row">
 	<div class=" col-md-6 offset-md-3">
