Mise à jour des commentaires
J'ai ajouté des commentaires dans les fichiers dans le dossier src et templates

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
     <meta name="author" content="Léa Heurtin">
     <link rel="icon" href="">
 
-    <title>{% block title %}Mon Blog{% endblock %}</title>
+    <title>{% block title %}Balance ton sport{% endblock %}</title>
 
     {% block stylesheets %}
     <!-- Font Awesome -->
@@ -35,7 +35,7 @@
 
     <div class="container">
         <!-- brand -->
-        <a class="navbar-brand" href="{{ path('accueil') }}">Mon Blog</a>
+        <a class="navbar-brand" href="{{ path('accueil') }}">Balance ton sport</a>
 
         <!-- Collapse button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav"
@@ -64,7 +64,7 @@
 </main>
 
 <footer class="page-footer">
-    Copyright Mon Blog
+    Copyright Balance ton sport
 </footer>
 
 {% block javascripts %}
