--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -19,6 +19,8 @@
             <label for="password">Mot de passe</label>
         </div>
 
+        <input type="hidden" name="_target_path" value="/profil" />
+
         <button class="btn btn-primary" type="submit">Se connecter</button>
     </form>
 
