--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,7 +35,9 @@
 
     <div class="container">
         <!-- brand -->
-        <a class="navbar-brand" href="{{ path('accueil') }}">Balance ton sport</a>
+        <a class="navbar-brand" href="{{ path('accueil') }}">
+            <img src="{{ asset('img/logo/plus-un-logo.png') }}" height="50" alt="Logo du site Plus Un">
+        </a>
 
         <!-- Collapse button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav"
