Déplacement class container
Au lieu de mettre la class container sur la ballise main dans base.html.twig, je l'ai mise dans des balises dans les templates, ca laisse plus de flexibilité pour les images en container-fluid (qui prennent toute la largeur de la page)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@ main {
 /*------------------------ BLOCK NAV --------------------------*/
 
 	/* MENU HAMBUGER */
-	.navbar-collapse {
+	#main-nav .collapse {
 		/* ajout d'un marge en haut pour espacer entre le logo et le reste du menu */
 		margin-top : 20px;
 	}
