--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,12 +25,11 @@
 <body>
 
 <header class="header">
-    <div class="container">
-        <h1 class="text-center"></h1>
-        <h2 class="text-center"></h2>
-    </div>
-</header>
 
+{# Navigation en colonne dans la page pofil #}
+{% block navprofil %} {% endblock %}
+
+{# Navigation principale #}
 <nav class="navbar navbar-expand-lg navbar-light white fixed-top scrolling-navbar">
 
     <div class="container">
@@ -59,14 +58,18 @@
                     <li class="nav_item"><a class="nav-link" href="{{ path('inscription') }}">Inscription</a></li>
                     <li class="nav_item"><a class="nav-link" href="{{ path('connexion') }}"><i class="fa fa-user"></i> Connexion</a></li>
                 {% endif %}
+
             </ul>
 
         </div>
     </div>
 </nav>
 
-<main class="container">
+</header>
+
+<main>
     {% block main %}{% endblock %}
+    }
 </main>
 
 <footer class="page-footer">
