--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,27 +2,30 @@
 
 {% block main %}
 
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <section class="container">
 
-    <form action="{{ path('login_check') }}" method="post">
+        {% if error %}
+            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
 
-        <div class="md-form">
-            <i class="fa fa-user prefix grey-text"></i>
-            <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control"/>
-            <label for="username">Pseudo</label>
-        </div>
-        <div class="md-form">
-            <i class="fa fa-envelope prefix grey-text"></i>
-            <input type="password" id="password" name="_password" class="form-control"/>
-            <label for="password">Mot de passe</label>
-        </div>
+        <form action="{{ path('login_check') }}" method="post">
 
-        <input type="hidden" name="_target_path" value="/profil" />
+            <div class="md-form">
+                <i class="fa fa-user prefix grey-text"></i>
+                <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control"/>
+                <label for="username">Pseudo</label>
+            </div>
+            <div class="md-form">
+                <i class="fa fa-envelope prefix grey-text"></i>
+                <input type="password" id="password" name="_password" class="form-control"/>
+                <label for="password">Mot de passe</label>
+            </div>
 
-        <button class="btn btn-primary" type="submit">Se connecter</button>
-    </form>
+            <input type="hidden" name="_target_path" value="/profil" />
+
+            <button class="btn btn-primary" type="submit">Se connecter</button>
+        </form>
+    </section>
 
 {% endblock %}
 
