--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,17 +11,32 @@ main {
 
 
 
-/*------------------------ BLOCK NAV --------------------------*/
+/*------------------------ BLOCK MAIN NAV --------------------------*/
 
-	/* MENU HAMBUGER */
-	#main-nav .collapse {
-		/* ajout d'un marge en haut pour espacer entre le logo et le reste du menu */
-		margin-top : 20px;
-	}
 
 	/* BOUTON PROPOSER UN EVENEMENT */
 	#btn-proposer_evenement {
 		margin-right : 20px;
 	}
 
-/*------------------------ BLOCK NAV --------------------------*/
+/*------------------------ BLOCK MAIN NAV --------------------------*/
+
+
+
+
+
+
+/*------------------------ BLOCK PROFIL NAV --------------------------*/
+
+
+	/* MENU SLIDE */
+	#slide-out {
+		height: 400px;
+
+		position : relative;
+
+		background: grey;
+	}
+
+/*------------------------ BLOCK PROFIL NAV --------------------------*/
+
