--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="main-nav">
 
             {# bouton action "proposer un événement" qui conduit au form de création d'événement #}
-            <a id="btn-proposer_evenement" class="nav-link btn btn-default btn-rounded ml-auto" href="">Proposer un événement &nbsp;<i class="fa fa-plus-circle" aria-hidden="true"></i></a>
+            <a id="btn-proposer_evenement" class="nav-link btn btn-default btn-rounded ml-auto" href="{{ path('proposerevenements') }}">Proposer un événement &nbsp;<i class="fa fa-plus-circle" aria-hidden="true"></i></a>
                 
             <ul class="navbar-nav">
                     <li class="nav_item"><a class="nav-link" href="">Les événements</a></li>
