--- a/templates/sitepublic/proposer.html.twig
+++ b/templates/sitepublic/proposer.html.twig
@@ -1,16 +1,17 @@
 form.organisateur
 form.titre
 form.description
-form.date
-form.heuredebut
-form.heurefin
-form.participantmin
-form.participanmax
+form.date_evenement
+form.heure_debut
+form.heure_fin
+form.participant_min
+form.participa_nmax
 form.sport          
-form.niveau         {# niveau requis #}
-form.datelimite     {# date limite d'inscription à l'événement #}
+form.niveau          {# niveau requis #}
+form.date_limite     {# date limite d'inscription à l'événement #}
 form.prix
-form.codepostal
+form.code_postal
 form.ville
 form.quartier
 form.photo
+form.inscription    
