--- a/templates/sitepublic/proposer.html.twig
+++ b/templates/sitepublic/proposer.html.twig
@@ -4,14 +4,16 @@ form.description
 form.date_evenement
 form.heure_debut
 form.heure_fin
+form.inscription 
 form.participant_min
-form.participa_nmax
+form.participant_nmax
 form.sport          
 form.niveau          {# niveau requis #}
 form.date_limite     {# date limite d'inscription à l'événement #}
+form.statut_prix 
 form.prix
 form.code_postal
 form.ville
 form.quartier
 form.photo
-form.inscription    
+    
