--- a/templates/security/profil.html.twig
+++ b/templates/security/profil.html.twig
@@ -1,26 +1,46 @@
 {% extends 'base.html.twig' %}
 
-{% block navprofil %}
-
-    
-
-{% endblock %}
-
 {% block main %}
-	<section class="container">
+<div class="container">
+	<div class="row">
 
-		{# pour récupérer les informations sur l'utilisateur (ne fonctionne qu'avec l'utilisateur) app.user.information voulue #}
-		<p>Bonjour, {{ app.user.username }}</p>
+		{# menu du profil, togglable #}
+		<aside id="profil-nav" class="side-nav sn-bg-4 col-md-4 col-sm-6">
+			{# Contenu du menu #}
+			<div class="list-group" id="list-tab" role="tablist">
+			    <a class="list-group-item list-group-item-action" id="list-informations-list" data-toggle="list" href="#list-informations" role="tab" aria-controls="informations">Informations</a>
+			    <a class="list-group-item list-group-item-action" id="list-evenementorganises-list" data-toggle="list" href="#list-evenementorganises" role="tab" aria-controls="evenementorganises">Événements organisés</a>
+			    <a class="list-group-item list-group-item-action" id="list-evenementparticipes-list" data-toggle="list" href="#list-evenementparticipes" role="tab" aria-controls="evenementparticipes">Événements participés</a>
+			    <a class="list-group-item list-group-item-action" id="list-evenementhistorique-list" data-toggle="list" href="#list-evenementhistorique" role="tab" aria-controls="evenementhistorique">Historique</a>
+			</div>
+		</aside>
 
-		{# bouton pour ouvrir le menu vertical #}
-		<button type="bouton" class="btn btn-default button-collapse">Ouvrir le menu</button>
+		{# Bouton pour ouvrir/fermer le menu #}
+		<div class="col-1">
+			<i id="btn-nav-profil" class="fa fa-user"></i>
+			{# <span>Profil</span> #}
+		</div>
+		
+		{# Contenu lié aux différents éléments du menu profil #}
+		<section id="profil-content" class="col-md-11 col-sm-6">
+			{# pour récupérer les informations sur l'utilisateur (ne fonctionne qu'avec l'utilisateur) app.user.information voulue #}
+			<p>Bonjour, {{ app.user.username }}</p>
 
-		{# Sidebar navigation #}
-		    <div id="slide-out" class="side-nav sn-bg-4 fixed col-sm-4">
-		        Menu à faire slider
+			<hr>
+
+			<div class="tab-content" id="nav-tabContent">
+		      <div class="tab-pane fade show active" id="list-informations" role="tabpanel" aria-labelledby="list-informations-list">
+		      	{% block infouser %}On sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. Plusieurs versions sont apparues avec le temps, parfois par accident, souvent intentionnellement (histoire d'y rajouter de petits clins d'oeil, voire des phrases embarassantes).{% endblock %}
+		      </div>
+		      <div class="tab-pane fade" id="list-evenementorganises" role="tabpanel" aria-labelledby="list-evenementorganises-list">{% block evenementorganise %}Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.{% endblock %}</div>
+		      <div class="tab-pane fade" id="list-evenementparticipes" role="tabpanel" aria-labelledby="list-evenementparticipes-list">{% block evenementparticipe %}Contrairement à une opinion répandue, le Lorem Ipsum n'est pas simplement du texte aléatoire. Il trouve ses racines dans une oeuvre de la littérature latine classique datant de 45 av. J.-C., le rendant vieux de 2000 ans. Un professeur du Hampden-Sydney College, en Virginie, s'est intéressé à un des mots latins les plus obscurs, consectetur, extrait d'un passage du Lorem Ipsum, et en étudiant tous les usages de ce mot dans la littérature classique, découvrit la source incontestable du Lorem Ipsum. Il provient en fait des sections 1.10.32 et 1.10.33 du "De Finibus Bonorum et Malorum" (Des Suprêmes Biens et des Suprêmes Maux) de Cicéron. Cet ouvrage, très populaire pendant la Renaissance, est un traité sur la théorie de l'éthique. Les premières lignes du Lorem Ipsum, "Lorem ipsum dolor sit amet...", proviennent de la section 1.10.32.{% endblock %}</div>
+		      <div class="tab-pane fade" id="list-evenementhistorique" role="tabpanel" aria-labelledby="list-evenementhistorique-list">{% block evenementhistorique %}Plusieurs variations de Lorem Ipsum peuvent être trouvées ici ou là, mais la majeure partie d'entre elles a été altérée par l'addition d'humour ou de mots aléatoires qui ne ressemblent pas une seconde à du texte standard. Si vous voulez utiliser un passage du Lorem Ipsum, vous devez être sûr qu'il n'y a rien d'embarrassant caché dans le texte. Tous les générateurs de Lorem Ipsum sur Internet tendent à reproduire le même extrait sans fin, ce qui fait de lipsum.com le seul vrai générateur de Lorem Ipsum. Iil utilise un dictionnaire de plus de 200 mots latins, en combinaison de plusieurs structures de phrases, pour générer un Lorem Ipsum irréprochable. Le Lorem Ipsum ainsi obtenu ne contient aucune répétition, ni ne contient des mots farfelus, ou des touches d'humour.{% endblock %}</div>
 		    </div>
-		{# Sidebar navigation  #}
-	</section>
+
+		</section>
+
+	</div>
+</div>
 {% endblock %}
 
 {% block javascripts %}
