Menu modal profil
Création d'un menu pour le profil en modal.
Le contenu de chaque lien du menu s'affiche dynamiquement.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -53,7 +53,7 @@
                 {# si l'utilisateur n'est pas connecté, on affiche inscription / connexion #}
                 {% else %}
                     <li class="nav_item"><a class="nav-link" href="{{ path('inscription') }}">Inscription</a></li>
-                    <li class="nav_item"><a class="nav-link" href="{{ path('connexion') }}"Connexion</a></li>
+                    <li class="nav_item"><a class="nav-link" href="{{ path('connexion') }}">Connexion</a></li>
                 {% endif %}
 
             </ul>
