--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,11 +30,26 @@ main {
 
 
 	/* MENU SLIDE */
-	#profil-nav {
-		position : absolute;
-		left : 0;
-		z-index: 1;
+	#profil-nav .modal-header {
+		background-color : #22B573;
 	}
+
+		/* BOUTON MENU SLIDE */
+		.btn-rond {
+			-webkit-border-radius: 100%;
+			border-radius: 100%;
+
+			border : none;
+
+			background-color: #22B573;
+
+			-webkit-box-shadow: 1px 1px 10px 1px #cccccc;
+			box-shadow: 1px 1px 10px 1px #cccccc;
+		}
+
+		.icon-color {
+			color : white;
+		}
 
 /*------------------------ BLOCK PROFIL NAV --------------------------*/
 
