--- a/templates/security/profil.html.twig
+++ b/templates/security/profil.html.twig
@@ -5,20 +5,42 @@
 	<div class="row">
 
 		{# menu du profil, togglable #}
-		<aside id="profil-nav" class="side-nav sn-bg-4 col-md-4 col-sm-6">
-			{# Contenu du menu #}
-			<div class="list-group" id="list-tab" role="tablist">
-			    <a class="list-group-item list-group-item-action" id="list-informations-list" data-toggle="list" href="#list-informations" role="tab" aria-controls="informations">Informations</a>
-			    <a class="list-group-item list-group-item-action" id="list-evenementorganises-list" data-toggle="list" href="#list-evenementorganises" role="tab" aria-controls="evenementorganises">Événements organisés</a>
-			    <a class="list-group-item list-group-item-action" id="list-evenementparticipes-list" data-toggle="list" href="#list-evenementparticipes" role="tab" aria-controls="evenementparticipes">Événements participés</a>
-			    <a class="list-group-item list-group-item-action" id="list-evenementhistorique-list" data-toggle="list" href="#list-evenementhistorique" role="tab" aria-controls="evenementhistorique">Historique</a>
+		<aside>
+
+			<!-- Modal -->
+			<div class="modal fade left show" id="profil-nav" tabindex="-1" role="dialog" aria-labelledby="profil-navLabel" aria-hidden="true">
+			    <div class="modal-dialog modal-full-height modal-left modal-notify modal-info" role="document">
+			        <div class="modal-content">
+			            <div class="modal-header">
+			                <h5 class="modal-title heading lead" id="profil-navLabel">Mon compte</h5>
+			                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			                    <span class="white-text" aria-hidden="true">&times;</span>
+			                </button>
+			            </div>
+			            <div class="modal-body">
+			                {# Contenu du menu #}
+							<div class="list-group" id="list-tab" role="tablist">
+							    <a class="list-group-item list-group-item-action" id="list-informations-list" data-toggle="list" href="#list-informations" role="tab" aria-controls="informations">Informations</a>
+							    <a class="list-group-item list-group-item-action" id="list-evenementorganises-list" data-toggle="list" href="#list-evenementorganises" role="tab" aria-controls="evenementorganises">Événements organisés</a>
+							    <a class="list-group-item list-group-item-action" id="list-evenementparticipes-list" data-toggle="list" href="#list-evenementparticipes" role="tab" aria-controls="evenementparticipes">Événements participés</a>
+							    <a class="list-group-item list-group-item-action" id="list-evenementhistorique-list" data-toggle="list" href="#list-evenementhistorique" role="tab" aria-controls="evenementhistorique">Historique</a>
+							</div>
+			            </div>
+			            <div class="modal-footer">
+			                {# <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+			                <button type="button" class="btn btn-primary">Save changes</button> #}
+			            </div>
+			        </div>
+			    </div>
 			</div>
+                                
 		</aside>
 
 		{# Bouton pour ouvrir/fermer le menu #}
 		<div class="col-1">
-			<i id="btn-nav-profil" class="fa fa-user"></i>
-			{# <span>Profil</span> #}
+			<button id="btn-nav-profil" type="button" class="btn-rond btn-lg" data-toggle="modal" data-target="#profil-nav">
+			    <i class="fa fa-user icon-color"></i>
+			</button>
 		</div>
 		
 		{# Contenu lié aux différents éléments du menu profil #}
