--- a/templates/sitepublic/evenements.html.twig
+++ b/templates/sitepublic/evenements.html.twig
@@ -3,9 +3,10 @@
 {% block main %}
 <section class="form-elegant container">
 	Titre : {{ evenement.titre }}<br>
-	Organisateur : {{ evenement.organisateur }}<br>
+	Organisé par : {{ evenement.organisateur }}<br>
 	Description : {{ evenement.description }}<br>
-	{{ evenement.dateEvenement|date("d/m/Y") }}
+	Le {{ evenement.dateEvenement|date("d/m/Y") }} de {{ evenement.heureDebut|date('H:i') }} à {{ evenement.heureFin|date('H:i') }}<br>
+	Niveau demandé : {{ evenement.niveau.nom }}<br>
 	{{ evenement.sport.nom }}
 
 </section>
