--- a/templates/sitepublic/evenements.html.twig
+++ b/templates/sitepublic/evenements.html.twig
@@ -2,12 +2,14 @@
 
 {% block main %}
 <section class="form-elegant container">
+	{% for evenement in evenements %}
 	Titre : {{ evenement.titre }}<br>
 	Organisé par : {{ evenement.organisateur }}<br>
 	Description : {{ evenement.description }}<br>
 	Le {{ evenement.dateEvenement|date("d/m/Y") }} de {{ evenement.heureDebut|date('H:i') }} à {{ evenement.heureFin|date('H:i') }}<br>
 	Niveau demandé : {{ evenement.niveau.nom }}<br>
 	{{ evenement.sport.nom }}
+	{% endfor %}
 
 </section>
 
