--- a/templates/sitepublic/evenements.html.twig
+++ b/templates/sitepublic/evenements.html.twig
@@ -6,7 +6,7 @@
 	Titre : {{ evenement.titre }}<br>
 	Organisé par : {{ evenement.organisateur }}<br>
 	Description : {{ evenement.description }}<br>
-	Le {{ evenement.dateEvenement|date("d/m/Y") }} de {{ evenement.heureDebut|date('H:i') }} à {{ evenement.heureFin|date('H:i') }}<br>
+	Le {{ evenement.dateEvenement|date("d/m/Y") }} à {{ evenement.dateEvenement|date("H:i") }}<br>
 	Niveau demandé : {{ evenement.niveau.nom }}<br>
 	{{ evenement.sport.nom }}
 	{% endfor %}
