--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,16 +46,19 @@
                 
             <ul class="navbar-nav">
                     <li class="nav_item"><a class="nav-link" href="">Les événements</a></li>
+                {# accès limiter aux admin #}
+                {% if is_granted('ROLE_SUPER_ADMIN') %}
+                    <li class="nav_item"><a class="nav-link" href="{{ path('ajouterSport') }}">Gestion du site</a></li>
+                {% endif %}
                 {# accès limité aux utilisateurs connectés, on affiche mon compte et deconnexion #}
                 {% if is_granted('ROLE_USER') %}
-                    <li class="nav_item"><a class="nav-link" href="{{ path('profil') }}">Mon compte</a></li>
+                    <li class="nav_item"><a class="nav-link" href="{{ path('profil') }}">Compte Admin</a></li>
                     <li class="nav_item"><a class="nav-link" href="{{ path('deconnexion') }}">Déconnexion</span></a></li>
                 {# si l'utilisateur n'est pas connecté, on affiche inscription / connexion #}
                 {% else %}
                     <li class="nav_item"><a class="nav-link" href="{{ path('inscription') }}">Inscription</a></li>
                     <li class="nav_item"><a class="nav-link" href="{{ path('connexion') }}">Connexion</a></li>
                 {% endif %}
-
             </ul>
 
         </div>
