--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,7 +45,7 @@
             <a id="btn-proposer_evenement" class="nav-link btn btn-default btn-rounded ml-auto" href="{{ path('proposerevenements') }}">Proposer un événement &nbsp;<i class="fa fa-plus-circle" aria-hidden="true"></i></a>
                 
             <ul class="navbar-nav">
-                    <li class="nav_item"><a class="nav-link" href="">Les événements</a></li>
+                    <li class="nav_item"><a class="nav-link" href="{{ path('evenements') }}">Les événements</a></li>
                 {# accès limité aux utilisateurs admin #}
                 {% if is_granted('ROLE_SUPER_ADMIN') %}
                     <li class="nav_item"><a class="nav-link" href="{{ path('ajouterSport') }}">Gestion Sports</a></li>
