Nombre de participants
Motif controller : nombre de participants

--- a/templates/sitepublic/details.html.twig
+++ b/templates/sitepublic/details.html.twig
@@ -2,6 +2,7 @@
 
 {% block main %}
 <section class="form-elegant container">
+	Participants : {{ nombre }} / {{ evenement.participantMax }}<br>
 	Titre : {{ evenement.titre }}<br>
 	Organisé par : {{ evenement.organisateur }}<br>
 	Description : {{ evenement.description }}<br>
