--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,6 +38,10 @@ main {
 	
 
 	/* MENU SLIDE */
+	#profil-nav {
+		-webkit-box-shadow: 0 10px 10px 0 #cccccc;
+		box-shadow: 0 10px 10px 0 #cccccc;
+	}
 
 	#profil-nav .modal-header {
 		/*background-color : #22B573;*/
@@ -72,17 +76,15 @@ main {
 		padding : 0px;
 
 		/* Remonter le bloc pour qu'il soit plus près de l'avatar */
-		bottom: 45px;
-	}
-
-	#profil-nav-item {
-		/* padding entre item du menu et nom utilisateur */
-		padding-top : 20px;
+		bottom: 65px;
 	}
 
 	#profil-nav .list-group-item {
 		/* annulation des borders colorés */
 		border : none;
+
+		/* réduction du padding haut et bas */
+		padding : .5rem 1.25rem;
 	}
 
 		#profil-nav .list-group-item.active {
@@ -91,8 +93,8 @@ main {
 			border-color : #FFF;
 
 			/* apparence en actif */
-			-webkit-box-shadow:inset 0 5px 5px 1px #E6E6E6;
-			box-shadow:inset 0 5px 5px 1px #E6E6E6;
+			-webkit-box-shadow:inset 0px 15px 10px -15px #E6E6E6;
+			box-shadow:inset 0px 15px 10px -15px #E6E6E6;
 
 			color : #333;
 
