--- a/templates/sitepublic/index.html.twig
+++ b/templates/sitepublic/index.html.twig
@@ -4,17 +4,18 @@
 
 {% block main %}
 
+{# Bannière présente dans l'accueil #}
+<div class="view img-banner hm-teal-light">
+	<div class="mask pattern-5 flex-center">
+		<div class="container">
+        	<h2 class="white-text text-center display-4">Dispo pour un match ?</h2>
+    	</div>
+    </div>
+</div>
+
 <section class="container">
 	<div class="row">
-		<div class=" col-md-6 offset-md-3">
-			<div class="card">
-			        <img src="{{ asset('img/basketball.jpg') }}" class="img-fluid" alt="Un groupe de personne qui joue au basketball sur un terrain public">
-			    <div class="card-body">
-			        <p class="card-text">Rejoignez la communauté des passionnés de leurs animaux et partagez vos meilleurs photos. C'est ici que votre compagnon devra une star !</p>
-			        <a href="" class="btn btn-primary">Poster mes photos</a>
-			    </div>
-			</div>
-		</div>
 	</div>
 </section>
+
 {% endblock %}
