ajout d'une marge supérieure
Création d'une class qui permet d'ajouter une marge supérieure pour que le contenu ne passe pas sous le menu fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,9 +8,9 @@
 
 /*------------------------ BLOCK MAIN --------------------------*/
 
-/*main {
+.margin-top {
 	margin-top: 150px;
-}*/
+}
 
 /*------------------------ BLOCK MAIN --------------------------*/
 
