--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,7 +2,7 @@
 
 {% block main %}
 
-    <section class="container">
+    <section class="container margin-top">
 
         {% if error %}
             <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
