--- a/templates/security/profil.html.twig
+++ b/templates/security/profil.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block main %}
-<div class="container">
+<div class="container margin-top">
 	<div class="row">
 
 		{# menu du profil, togglable #}
