--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block main %}
-<section class="form-elegant container">
+<section class="form-elegant container margin-top">
 
     {# Form without header #}
     <div class="card">
