--- a/templates/sitepublic/details.html.twig
+++ b/templates/sitepublic/details.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block main %}
-<section class="form-elegant container">
+<section class="form-elegant container margin-top">
 	Titre : {{ evenement.titre }}<br>
 	Organisé par : {{ evenement.organisateur }}<br>
 	Description : {{ evenement.description }}<br>
