--- a/templates/sitepublic/erreurEvenements.html.twig
+++ b/templates/sitepublic/erreurEvenements.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block main %}
-<section class="form-elegant container">
+<section class="form-elegant container margin-top">
 	<h2>Oups.. Cet événement n'existe pas !</h2>
 	<a href="{{ path('evenements') }}" class="blue-text ml-1">Retour aux événements</a>
 
