--- a/templates/sitepublic/inscriptionEvenement.html.twig
+++ b/templates/sitepublic/inscriptionEvenement.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block main %}
-<section class="form-elegant container">
+<section class="form-elegant container margin-top">
 	Merci {{ user.username }} ! <br>
 	Votre inscription à l'événement {{ evenement.titre }} a bien été prise en compte !
 
