--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="Balance ton sport">
-    <link rel="icon" href="">
+    <meta name="author" content="Plus Un">
+    <link rel="icon" type="image/png" sizes="196x196" href="{{ asset('img/logo/plus-un-icon.png')}}">
 
-    <title>{% block title %}Balance ton sport{% endblock %}</title>
+    <title>{% block title %}Soyez toujours au complet avec Plus Un{% endblock %}</title>
 
     {% block stylesheets %}
     <!-- Font Awesome -->
