--- a/templates/security/profil.html.twig
+++ b/templates/security/profil.html.twig
@@ -67,7 +67,7 @@
 			<div class="tab-content" id="nav-tabContent">
 
 		      <div class="tab-pane fade" id="list-info-voir" role="tabpanel" aria-labelledby="list-info-voir-list">
-		      	{% block infouser %}Emplacement des informations de l'utilisateur{% endblock %}
+		      	{% block infouser %}{% endblock %}
 		      </div>
 
 		      <div class="tab-pane fade" id="list-info-modifier" role="tabpanel" aria-labelledby="list-info-modifier-list">
