--- a/templates/sitepublic/inscriptionEvenement.html.twig
+++ b/templates/sitepublic/inscriptionEvenement.html.twig
@@ -2,9 +2,19 @@
 
 {% block main %}
 <section class="form-elegant container">
-	Merci {{ user.username }} ! <br>
-	Votre inscription à l'événement {{ evenement.titre }} a bien été prise en compte !
+	Bonjour {{ user.username }} ! <br>
+		{% if aucun %}
+			Vous ne participez à aucun événement pour le moment !<br>
+		{% endif %}
+		{% if not aucun %}
+		Vous participez à : {{ nombre }} événements !<br>
 
+			{% for participant in participants %}
+				Titre : {{ participant.evenement.titre }}<br>
+				Description : {{ participant.evenement.description }}<br>
+				Le {{ participant.evenement.dateEvenement|date("d/m/Y") }} à {{ participant.evenement.dateEvenement|date("H:i") }}<br>
+			{% endfor %}
+		{% endif %}
 </section>
 
 {% endblock %}
