--- a/templates/admin/sport.html.twig
+++ b/templates/admin/sport.html.twig
@@ -12,7 +12,7 @@
 		{# message d'erreur sur le pseudo #}
 		{{ form_errors(form.categorie) }}
 		{# input, checkbox, select, etc #}
-		{{ form_widget(form.categorie, {'attr': {'class': 'browser-default'}}) }}
+		{{ form_widget(form.categorie, {'attr': {'class': 'form-control'}}) }}
 		
 	</div>
 
