--- a/templates/sitepublic/proposer.html.twig
+++ b/templates/sitepublic/proposer.html.twig
@@ -8,56 +8,105 @@
 
         <div class="card-body mx-4">
 
+        	<h1 class="text-center">Organiser un événement</h1>
+
 		    {{ form_start(form, {'method': 'POST'}) }}
 
 		    	{{ form_errors(form) }}
 
+		    	{# TITRE #}
 		    	<div class="md-form">
 		        	{{ form_errors(form.titre) }}
 					{{ form_widget(form.titre, {'attr': {'class': 'form-control'}}) }}
 					{{ form_label(form.titre, "Titre de l'événement") }}
 		    	</div>
 
+		    	{# DESCRIPTION #}
 		    	<div class="md-form">
 		        	{{ form_errors(form.description) }}
 					{{ form_widget(form.description, {'attr': {'class': 'md-textarea'}}) }}
 					{{ form_label(form.description, "Description de l'événement") }}
 		    	</div>
 
+		    	{# PRIVE OU NON #}
 		    	<div class="form-group">
 		        	{{ form_errors(form.statut) }}
 		        	{{ form_label(form.statut, "Cet événement est privé") }}
 					{{ form_widget(form.statut, {'attr': {'class': ''}}) }}
 		    	</div>
 
-		    	<div class="md-form">
+		    	{# DATE #}
+		    	<div class="">
 		        	{{ form_errors(form.dateEvenement) }}
-					{{ form_widget(form.dateEvenement, {'attr': {'class': 'form-control'}}) }}
+		        	<label>Date de l'événement</label>
+					{{ form_widget(form.dateEvenement, {'attr': {'class': ''}}) }}
 		    	</div>
 
+		    	{# INSCRIPTION OU NON #}
 		    	<div class="form-group">
-		    		{{ form_label(form.inscription, "Evénement sur inscription ?") }}
+		    		{{ form_errors(form.inscription) }}
+		    		<label>Evénements sous aux inscriptions : </label>
 					{{ form_widget(form.inscription, {'attr': {'class': ''}}) }}
 		    	</div>
 
-		    	<div class="md-form">
+		    	{# NB MIN PARTICIPANT #}
+		    	<div class="">
+		    		{{ form_errors(form.participantMin) }}
+		    		<label>Nombre minimum de participants</label>
 					{{ form_widget(form.participantMin, {'attr': {'class': 'form-control'}}) }}
-					{{ form_label(form.participantMin, "Nombre de participants minimum") }}
 		    	</div>
 
-		    	<div class="md-form">
+		    	{# NB MAX PARTICIPANT #}
+		    	<div class="">
+		    		{{ form_errors(form.participantMax) }}
+		    		<label>Nombres maximum de participants</label>
 					{{ form_widget(form.participantMax, {'attr': {'class': 'form-control'}}) }}
-					{{ form_label(form.participantMax, "Nombre de participants maximum") }}
 		    	</div>
 		    	
+		    	{# NIVEAU REQUIS #}
 		    	<div class="">
+		    		{{ form_errors(form.niveau) }}
 		    		<label>Niveau requis</label>
-		        	{{ form_errors(form.niveau) }}
-					{{ form_widget(form.niveau, {'attr': {'class': 'browser-default'}}) }}
+					{{ form_widget(form.niveau, {'attr': {'class': 'form-control'}}) }}
+		    	</div>
+
+		    	{# CODE POSTAL #}
+		    	<div class="md-form">
+		        	{{ form_errors(form.codePostal) }}
+					{{ form_widget(form.codePostal, {'attr': {'class': 'form-control'}}) }}
+					{{ form_label(form.codePostal, "Code postal") }}
+		    	</div>
+
+		    	{# VILLE #}
+		    	<div class="md-form">
+		        	{{ form_errors(form.ville) }}
+					{{ form_widget(form.ville, {'attr': {'class': 'form-control'}}) }}
+					{{ form_label(form.ville, "Ville") }}
+		    	</div>
+
+		    	{# QUARTIER #}
+		    	<div class="md-form">
+		        	{{ form_errors(form.quartier) }}
+					{{ form_widget(form.quartier, {'attr': {'class': 'form-control'}}) }}
+					{{ form_label(form.quartier, "Quartier") }}
+		    	</div>
+
+		    	{# SPORT #}
+		    	<div class="">
+		    		{{ form_errors(form.sport) }}
+		        	<label>Sport</label>
+					{{ form_widget(form.sport, {'attr': {'class': 'form-control'}}) }}
+		    	</div>
+
+		    	{# PHOTO #}
+		    	<div class="">
+		    		{{ form_errors(form.photo) }}
+		        	{{ form_label(form.photo, "Photo") }}
+					{{ form_widget(form.photo, {'attr': {'class': ''}}) }}
 		    	</div>
 
 		    	<div class="text-center">
-		        	<button class="btn btn-primary" type="submit">S'inscrire ! <i class="fa fa-paper-plane-o ml-1"></i></button>
+		        	<button class="btn btn-primary" type="submit">Lancer l'invitation<i class="fa fa-paper-plane-o ml-1"></i></button>
 		        </div>
 
 		    {{ form_end(form) }}
